# invoice-generator

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
clients/example/: client.yaml
docs/: index.html  pyscript.toml
docs/css/: app.css
docs/js/: app.js  pdf.js  storage.js
docs/py/: bridge.py  invoice.py  templates.py  timesheet.py
invoice_generator/: __init__.py  __main__.py  cli.py  client.py  holidays.py  invoice.py  pdf.py  templates.py  timesheet.py
tests/: conftest.py  test_client.py  test_holidays.py  test_invoice.py  test_timesheet.py
tests/fixtures/: sample_invoice.json  sample_timesheet.json
